peac_dev/force-app/main/default/objects/Tax_Matrix__c/Tax_Matrix__c.object-meta.xml
<CustomObject>
    <label>Tax Matrix</label>
    <nameField>
        <displayFormat>TM-{0000}</displayFormat>
        <label>Tax Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Matrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>