peac_dev/force-app/main/default/objects/Tax_Matrix__c/fields/City_Rate__c.field-meta.xml
<CustomField>
    <fullName>City_Rate__c</fullName>
    <label>City Rate</label>
    <precision>8</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>