peac_dev/force-app/main/default/objects/Tax_Matrix__c/fields/County_Rate__c.field-meta.xml
<CustomField>
    <fullName>County_Rate__c</fullName>
    <label>County Rate</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>