peac_dev/force-app/main/default/objects/Tax_Matrix__c/fields/County_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>County_Tax_Amount__c</fullName>
    <formula>County_Rate__c *  Tax_Basis__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>County Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>