peac_dev/force-app/main/default/objects/Tax_Matrix__c/fields/Tax_Object__c.field-meta.xml
<CustomField>
    <fullName>Tax_Object__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tax Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>