peac_dev/force-app/main/default/objects/Tax_Matrix__c/fields/Tax_Record__c.field-meta.xml
<CustomField>
    <fullName>Tax_Record__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; + Tax_Record_Id__c, Tax_Record_Name__c, &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Record</label>
    <type>Text</type>
</CustomField>