peac_dev/force-app/main/default/objects/Tax_Matrix__c/fields/Tax_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Tax_Record_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tax Record Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>