peac_dev/force-app/main/default/objects/Tax_Matrix__c/fields/TCounty_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>TCounty_Tax_Amount__c</fullName>
    <formula>TCounty_Rate__c * Tax_Basis__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TCounty Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>