peac_dev/force-app/main/default/objects/Tax_Matrix__c/listViews/all.listView-meta.xml
<ListView>
    <fullName>all</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>all</label>
</ListView>